# python-template

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  tox.ini
.github/actions/setup-python-uv/: action.yaml
.github/workflows/: bootstrap-template.yaml  ci.yaml  coverage.yaml  docker.yaml  documentation.yaml  package.yaml  quality.yaml  security.yaml  template-smoke.yaml  tests.yaml
docs/: api.md  conf.py  documentation.md  index.md  template.md  usage.md
scripts/: bootstrap_template.py  update_coverage_readme.py  validate_distribution.py
tests/: test_bootstrap_template.py  test_greeter.py  test_template_smoke.py
